--- a/themes/uilite/layouts/partials/header.html
+++ b/themes/uilite/layouts/partials/header.html
@@ -15,12 +15,20 @@
 	</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- DNS pre-fetching -->
+	<link rel="dns-prefetch" href="https://maxcdn.bootstrapcdn.com/">
+	<link rel="dns-prefetch" href="https://cdnjs.cloudflare.com/">
+	<link rel="dns-prefetch" href="https://fonts.googleapis.com/">
+	<link rel="dns-prefetch" href="https://use.fontawesome.com/">
+	<link rel="dns-prefetch" href="https://code.jquery.com/">
+
 	<!-- Including the bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- Plugins -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/2.4.0/css/jquery.terminal.min.css" rel="stylesheet"/>
 	<!-- Social Icon fonts -->
-	<link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?u8vidh">
+	<link rel="stylesheet" href="{{ .Site.BaseURL }}css/socicon-style-cf.css">
 
 	<!-- Styles -->
 	{{ $style := resources.Get "css/main.scss" | resources.ExecuteAsTemplate "css/main.scss" . | resources.ToCSS | resources.Minify | resources.Fingerprint -}}
