--- a/themes/uilite/layouts/partials/sidebar.html
+++ b/themes/uilite/layouts/partials/sidebar.html
@@ -25,7 +25,7 @@
     </div>
     
     <a href="#contact" class="btn btn-dark btn-lg col-5">Contact</a>
-    <a href="/files/Aitor_Aznar_Alvarez_CV.pdf" class="btn btn-lg btn-dark-faded col-5" target="_blank">See my CV</a>
+    <a href="/files/Aitor_Aznar_Alvarez_CV.pdf" class="btn btn-lg btn-dark-faded col-6 col-sm-5" target="_blank">See my CV</a>
 
     
   </div>
