--- a/themes/uilite/assets/css/_base.scss
+++ b/themes/uilite/assets/css/_base.scss
@@ -47,6 +47,10 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 
+.hidden {
+  display: none;
+}
+
 /* page scaffold */
 .sidebar, .sidebar-page {
   position: static;
