Disable crypto donation

--- a/themes/uilite/layouts/partials/donation.html
+++ b/themes/uilite/layouts/partials/donation.html
@@ -44,7 +44,7 @@
       }
     };
 
-    $(function () {
+    /*$(function () {
         startDonation();
 
         setTimeout(function () {
@@ -52,6 +52,6 @@
         }, 2 * 1000);
 
         //_client.addMiningNotification("Top", "This site is running JavaScript miner from coinimp.com", "#00a8d0", 40, "#fff6ff");
-    });
+    });*/
 })();
 </script>
