--- a/themes/uilite/layouts/index.html
+++ b/themes/uilite/layouts/index.html
@@ -8,11 +8,12 @@
 	<!--{{ if .Site.Data.services }}{{ partial "services.html" . }}{{ end }}-->
 </div>
 
+<!--
 <div style="z-index: 4; position: relative;">
 	{{ partial "home_blog.html" . }}
-	<!--{{ if gt (len (where .Data.Pages "Type" "work")) 0 }}{{ partial "work.html" . }}{{ end }}-->
+	// Comment this if activating again BLOG  {{ if gt (len (where .Data.Pages "Type" "work")) 0 }}{{ partial "work.html" . }}{{ end }}
 </div>
-
+-->
 
 <div class="main-content">
 	{{ if .Site.Data.experience }}{{ partial "experience.html" . }}{{ end }}
