--- a/themes/uilite/layouts/_default/single.html
+++ b/themes/uilite/layouts/_default/single.html
@@ -3,7 +3,7 @@
     <header class="post-header">
       <div class="container mt-4">
         <h1 class="text-center heading">{{ .Title }}</h1>
-        <small class="text-center d-block text-muted">Posted on Sep 18, 2018</small>
+        <small class="text-center d-block text-muted">&nbsp;</small>
       </div>
 
       <div class="featured-image-container">
