Update kit digital page

--- a/themes/uilite/layouts/_default/single.html
+++ b/themes/uilite/layouts/_default/single.html
@@ -41,7 +41,7 @@
       {{ .Content }}
     </div>
     <div class="post-footer">
-      ## Rellena este formulario y me pondré en contacto contigo
+      <p>Rellena este formulario y me pondré en contacto contigo</p>
       {{ partial "contact.html" . }}
       {{ template "_internal/disqus.html" . }}
     </div>
